Bug 202687 - cannot add contacts on clean KDE user account
Summary: cannot add contacts on clean KDE user account
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR grave
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-05 21:06 UTC by FiNeX
Modified: 2009-09-15 12:25 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description FiNeX 2009-08-05 21:06:29 UTC
Version:            (using Devel)
OS:                Linux
Installed from:    Compiled sources

1) create a new user account
2) log in with KDE (I'm using KDE trunk r1007390)
3) start kaddressbook
4) add one contact

-> the "add to" combo box is empty!

5) press OK

Nothing happens.

It should be created a default resource automatically.
Comment 1 Tobias Koenig 2009-09-15 12:25:52 UTC
SVN commit 1023758 by tokoe:

Use KConfigGroup::readPathEntry() for string entries and
trigger initial synchronization after the resource has been
started.
This will ensure that there will always be a writable
default resource available.

BUG: 202687


 M  +10 -1     firstrun.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1023758