Use KConfigGroup::readPathEntry() for string entries and trigger initial synchronization after the resource has been started. This will ensure that there will always be a writable default resource available.

BUG: 202687

svn path=/trunk/KDE/kdepimlibs/; revision=1023758